--- a/backstage-config.yaml
+++ b/backstage-config.yaml
@@ -1,1 +1,8 @@
-test
+apiVersion: backstage.io/v1alpha1
+kind: Location
+metadata:
+  name: backstage-config
+spec:
+  type: file
+  targets:
+    - ./users.yaml
