--- a/backstage-users.yaml
+++ b/backstage-users.yaml
@@ -1,12 +1,10 @@
 apiVersion: backstage.io/v1alpha1
 kind: User
 metadata:
-  name: john-doe
+  name: jdoe
 spec:
   profile:
-    displayName: "John Doe"
-    email: john.doe@example.com
-    picture: https://example.com/john-doe.jpg
-  memberOf:
-    - team-a
-    - team-b
+    displayName: Jenny Doe
+    email: jenny-doe@example.com
+    picture: https://example.com/staff/jenny-with-party-hat.jpeg
+  memberOf: [team-b, employees]
