--- a/backstage-config.yaml
+++ b/backstage-config.yaml
@@ -6,5 +6,5 @@ metadata:
 spec:
   type: url
   targets:
-    - https://github.com/rogercodeprojects/backstage-config/blob/main/template.yaml
-    - https://github.com/rogercodeprojects/backstage-config/blob/main/users.yaml
+    - ./template.yaml
+    - ./users.yaml
