--- a/users.yaml
+++ b/users.yaml
@@ -5,5 +5,6 @@ metadata:
 spec:
   profile:
     # Intentional no displayName for testing
-    email: pokoyo@example.com
+    email: breanna-davison@example.com
     picture: https://avatars.dicebear.com/api/avataaars/breanna-davison@example.com.svg?background=%23fff
+  memberOf: [team-c]
