--- a/users.yaml
+++ b/users.yaml
@@ -1,10 +1,9 @@
 apiVersion: backstage.io/v1alpha1
 kind: User
 metadata:
-  name: pokoyo
+  name: pokoyo-23
 spec:
   profile:
     # Intentional no displayName for testing
     email: breanna-davison@example.com
     picture: https://avatars.dicebear.com/api/avataaars/breanna-davison@example.com.svg?background=%23fff
-  memberOf: [team-c]
