--- a/groups.yaml
+++ b/groups.yaml
@@ -1,13 +1,12 @@
 apiVersion: backstage.io/v1alpha1
 kind: Group
 metadata:
-  name: team-a
-  description: Team A
+  name: developer
+  description: Main developer
 spec:
   type: team
   profile:
     # Intentional no displayName for testing
     email: team-a@example.com
     picture: https://avatars.dicebear.com/api/identicon/team-a@example.com.svg?background=%23fff&margin=25
-  parent: backstage
   children: []
