--- a/users.yaml
+++ b/users.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: User
 metadata:
-  name: Roger Ortega
+  name: Roger_Ortega
 spec:
   profile:
     # Intentional no displayName for testing
