--- a/domains/domain.yaml
+++ b/domains/domain.yaml
@@ -12,3 +12,18 @@ metadata:
       icon: dashboard
 spec:
   owner: team-a
+---
+apiVersion: backstage.io/v1alpha1
+kind: Domain
+metadata:
+  name: aplicacion-educación-niños
+  description: Es una aplicacion hecaha para que los niños con dificultades puedan aprender
+  title: aplicacion-educación-niños
+  links:
+    - url: http://example.com/domain/artists/
+      title: Domain Readme
+    - url: http://example.com/domains/artists/dashboard
+      title: Domain Metrics Dashboard
+      icon: dashboard
+spec:
+  owner: team-a
