--- a/systems/system.yaml
+++ b/systems/system.yaml
@@ -4,7 +4,7 @@ metadata:
   name: artist-engagement-portal
   description: Everything related to artists
   annotations:
-    backstage.io/techdocs-ref: dir:./docs/mkdocs.yml
+    backstage.io/techdocs-ref: dir:.
   tags:
     - portal
 spec:
